lustre/obdclass/obd_mount.c
@@ -460,10 +460,6 @@ int lustre_start_mgc(struct super_block *sb)
 				  OBD_CONNECT_LVB_TYPE |
 				  OBD_CONNECT_BULK_MBITS | OBD_CONNECT_BARRIER;
 
-#if LUSTRE_VERSION_CODE < OBD_OCD_VERSION(3, 0, 53, 0)
-	data->ocd_connect_flags |= OBD_CONNECT_MNE_SWAB;
-#endif
-
         if (lmd_is_client(lsi->lsi_lmd) &&
             lsi->lsi_lmd->lmd_flags & LMD_FLG_NOIR)
                 data->ocd_connect_flags &= ~OBD_CONNECT_IMP_RECOV;
